<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Casmack</string>
    <string name="send">Send</string>
    <string name="type_to_compose_text_enter_to_send">Enter your message</string>
    <string name="connection">Login</string>
    <string name="user">Username</string>
    <string name="domain">Domain</string>
    <string name="resource">Resource</string>
    <string name="password">Password</string>
    <string name="chat">Discussion</string>
    <string name="contact">Contact List</string>
    <string name="destination">Destination</string>
</resources>
