<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <TextView
            android:text="@string/user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <EditText
        	android:id="@+id/user"
            android:text="" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
			android:autoText="false" 
			android:capitalize="none" />
			
		<TextView
            android:text="@string/domain" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <EditText
        	android:id="@+id/domain"
            android:text=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
			android:autoText="false" 
			android:capitalize="none" 
			 />
			
		<TextView
            android:text="@string/resource"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <EditText
        	android:id="@+id/resource"
            android:text="Android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
			android:autoText="false" 
			android:capitalize="none" />
		
		<TextView
            android:text="@string/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <EditText
        	android:id="@+id/password"
            android:text=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
			android:autoText="false" 
			android:capitalize="none"
			android:password="true" />
			
		<LinearLayout
           android:id="@+id/bottom_panel"
           android:orientation="horizontal"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:paddingTop="5dip"
           android:paddingBottom="5dip"
           android:paddingLeft="5dip"
           android:paddingRight="5dip"
           android:background="@drawable/bottombar_landscape_565">


           <Button android:id="@+id/connection_button"
               android:layout_marginLeft="5dip"
               android:layout_width="wrap_content"
               android:layout_height="fill_parent"
               style="?android:attr/buttonStyle"
               android:layout_gravity="center"
               android:nextFocusLeft="@+id/embedded_text_editor"
               android:text="@string/connection"
           />
       </LinearLayout>
</LinearLayout>
